<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_fusion_pkg</name>
  <version>0.0.1</version>
  <description>
    This package contains sensor fusion node that manages the
    subscribers from all the sensors and publishes the combined sensor message.
  </description>
  <maintainer email="aws-deepracer@amazon.com">AWS DeepRacer</maintainer>
  <license>Apache 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>deepracer_interfaces_pkg</depend>
  <depend>compressed_image_transport</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
